--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -39,10 +39,12 @@
                 android:orientation="vertical"
                 android:layout_gravity = "center_horizontal|center_vertical">
                 <ImageView
+                    android:id="@+id/iv_whatsapp"
                     android:layout_width="90dp"
                     android:layout_height="90dp"
                     android:layout_gravity = "center_horizontal|center_vertical"
-                    android:src="@drawable/whatsapp">
+                    android:src="@drawable/whatsapp"
+                    android:text="@string/Diana1">
                 </ImageView>
                 <TextView
                     android:layout_width="wrap_content"
@@ -72,10 +74,12 @@
                 android:orientation="vertical"
                 android:layout_gravity = "center_horizontal|center_vertical">
                 <ImageView
+                    android:id="@+id/iv_facebook"
                     android:layout_width="90dp"
                     android:layout_height="90dp"
                     android:layout_gravity = "center_horizontal|center_vertical"
-                    android:src="@drawable/facebook">
+                    android:src="@drawable/facebook"
+                    android:text="@string/Diana2">
                 </ImageView>
                 <TextView
                     android:layout_width="wrap_content"
@@ -105,10 +109,12 @@
                 android:orientation="vertical"
                 android:layout_gravity = "center_horizontal|center_vertical">
                 <ImageView
+                    android:id="@+id/iv_instagram"
                     android:layout_width="90dp"
                     android:layout_height="90dp"
                     android:layout_gravity = "center_horizontal|center_vertical"
-                    android:src="@drawable/instagram">
+                    android:src="@drawable/instagram"
+                    android:text="@string/Diana3">
                 </ImageView>
                 <TextView
                     android:layout_width="wrap_content"
@@ -138,10 +144,12 @@
                 android:orientation="vertical"
                 android:layout_gravity = "center_horizontal|center_vertical">
                 <ImageView
+                    android:id="@+id/iv_twitter"
                     android:layout_width="95dp"
                     android:layout_height="95dp"
                     android:layout_gravity = "center_horizontal|center_vertical"
-                    android:src="@drawable/twitter">
+                    android:src="@drawable/twitter"
+                    android:text="@string/Diana4">
                 </ImageView>
                 <TextView
                     android:layout_width="wrap_content"
@@ -171,10 +179,12 @@
                 android:orientation="vertical"
                 android:layout_gravity = "center_horizontal|center_vertical">
                 <ImageView
+                    android:id="@+id/iv_wordpress"
                     android:layout_width="90dp"
                     android:layout_height="90dp"
                     android:layout_gravity = "center_horizontal|center_vertical"
-                    android:src="@drawable/wordpress">
+                    android:src="@drawable/wordpress"
+                    android:text="@string/Diana5">
                 </ImageView>
                 <TextView
                     android:layout_width="wrap_content"
@@ -204,10 +214,12 @@
                 android:orientation="vertical"
                 android:layout_gravity = "center_horizontal|center_vertical">
                 <ImageView
+                    android:id="@+id/iv_youtube"
                     android:layout_width="90dp"
                     android:layout_height="90dp"
                     android:layout_gravity = "center_horizontal|center_vertical"
-                    android:src="@drawable/youtube">
+                    android:src="@drawable/youtube"
+                    android:text="@string/Diana6">
                 </ImageView>
                 <TextView
                     android:layout_width="wrap_content"
